# serialize3

./: .gitignore  CMakeLists.txt  application.cpp  application.h  apps_factory.cpp  apps_factory.h  castxml-gccxml_app.cpp  castxml_app.cpp  cl_cmdline.txt  codegenerator.cpp  codegenerator.h  constants.h  external_app_launcher.cpp  external_app_launcher.h  file_comparator.cpp  file_comparator.h  gcc_cmdline.txt  gccxml_app.cpp  logger.h  main.cpp  serializablemap.cpp  serializablemap.h  serialize3.vcxproj  serialize3.vcxproj.filters  str_less.h  test0.hpp  test0_injected.cpp  test1.cpp  test1.hpp  test1_injected.cpp  test1_typeids.hpp  test2.hpp  test2_injected.cpp  test2_typeids.hpp  test3.hpp  test3_injected.cpp  test3_typeids.hpp  vpi_api.h  xml_element.cpp  xml_element.h  (+2 more)
h/client_code/: readme.txt  serialize_macros.h  serialize_ptrwrapper.h  serialize_utils.h
h/gen_code/: dumpertemplates.h  loadertemplates.h  serializable_boost_cntrs_includes.h  serializable_std_type_includes.h
h/storage/: primitivedumper.h  primitiveloader.h  serializedumper.h  serializeloader.h
